--- a/index.html
+++ b/index.html
@@ -8,110 +8,170 @@
 
 <body>
     <h1>Notification API</h1>
-    <button onclick="showNotifikasiSederhana()">Notifikasi Sederhana dengan Title dan Body</button>
-    <button onclick="showNotifikasiRequireInteraction() ">Notifikasi dengan Interaksi Pengguna</button>
-        <br>
-        <button onclick="showNotifikasiIkon()">Notifikasi dengan Gambar Ikon</button>
-        <br>
-        <button onclick="showNotifikasiBadge()">Notifikasi dengan Gambar Badge</button>
-        <script type="text/javascript">
-            // Periksa service worker
-            if (!('serviceWorker' in navigator)) {
-                console.log("Service worker tidak didukung browser ini.");
-            } else {
-                registerServiceWorker();
-            }
-            // Register service worker
-            function registerServiceWorker() {
-                return navigator.serviceWorker.register('service-worker.js')
-                    .then(function (registration) {
-                        console.log('Registrasi service worker berhasil.');
-                        return registration;
-                    })
-                    .catch(function (err) {
-                        console.error('Registrasi service worker gagal.', err);
-                    });
-            }
-            // Periksa fitur Notification API
-            if ("Notification" in window) {
-                requestPermission();
-            } else {
-                console.error("Browser tidak mendukung notifikasi.");
-            }
+    <button onclick="showNotifikasiSederhana()">Notifikasi Sederhana dengan Title dan Body</button><br>
+    <br>
+    <button onclick="showNotifikasiRequireInteraction() ">Notifikasi dengan Interaksi Pengguna</button><br>
+    <br>
+    <button onclick="showNotifikasiIkon()">Notifikasi dengan Gambar Ikon</button><br>
+    <br>
+    <button onclick="showNotifikasiBadge()">Notifikasi dengan Gambar Badge</button><br>
+    <br>
+    <button onclick="showNotifikasiActions()">Notifikasi dengan Actions</button><br>
+    <br>
+    <button onclick="showNotifikasiTag()">Notifikasi dengan Tag</button><br>
 
-            // Meminta ijin menggunakan Notification API
-            function requestPermission() {
-                Notification.requestPermission().then(function (result) {
-                    if (result === "denied") {
-                        console.log("Fitur notifikasi tidak diijinkan.");
-                        return;
-                    } else if (result === "default") {
-                        console.error("Pengguna menutup kotak dialog permintaan ijin.");
-                        return;
-                    }
-
-                    console.log("Fitur notifikasi diijinkan.");
+    <script type="text/javascript">
+        // Periksa service worker
+        if (!('serviceWorker' in navigator)) {
+            console.log("Service worker tidak didukung browser ini.");
+        } else {
+            registerServiceWorker();
+        }
+        // Register service worker
+        function registerServiceWorker() {
+            return navigator.serviceWorker.register('service-worker.js')
+                .then(function (registration) {
+                    console.log('Registrasi service worker berhasil.');
+                    return registration;
+                })
+                .catch(function (err) {
+                    console.error('Registrasi service worker gagal.', err);
                 });
-            }
+        }
+        // Periksa fitur Notification API
+        if ("Notification" in window) {
+            requestPermission();
+        } else {
+            console.error("Browser tidak mendukung notifikasi.");
+        }
 
-            function showNotifikasiSederhana() {
-                const title = 'Notifikasi Sederhana';
-                const options = {
-                    'body': 'Ini adalah konten notifikasi. \nBisa menggunakan baris baru.',
+        // Meminta ijin menggunakan Notification API
+        function requestPermission() {
+            Notification.requestPermission().then(function (result) {
+                if (result === "denied") {
+                    console.log("Fitur notifikasi tidak diijinkan.");
+                    return;
+                } else if (result === "default") {
+                    console.error("Pengguna menutup kotak dialog permintaan ijin.");
+                    return;
                 }
-                if (Notification.permission === 'granted') {
-                    navigator.serviceWorker.ready.then(function (registration) {
-                        registration.showNotification(title, options);
-                    });
-                } else {
-                    console.error('FItur notifikasi tidak diijinkan.');
-                }
-            }
 
-            function showNotifikasiRequireInteraction() {
-                const title = 'Notifikasi yang meminta interaksi pengguna';
-                const options = {
-                    requireInteraction: true,
-                };
-                if (Notification.permission === 'granted') {
-                    navigator.serviceWorker.ready.then(function (registration) {
-                        registration.showNotification(title, options);
-                    });
-                } else {
-                    console.error('Fitur notifikasi tidak diijinkan.');
-                }
-            }
+                console.log("Fitur notifikasi diijinkan.");
+            });
+        }
 
-            function showNotifikasiIkon() {
-                const title = 'Notifikasi Sederhana';
-                const options = {
-                    'body': 'Ini adalah konten notifikasi dengan gambar ikon.',
-                    'icon': 'maulana.jpg'
-                };
-                if (Notification.permission === 'granted') {
-                    navigator.serviceWorker.ready.then(function (registration) {
-                        registration.showNotification(title, options);
-                    });
-                } else {
-                    console.error('Fitur notifikasi tidak diijinkan.');
-                }
+        function showNotifikasiSederhana() {
+            const title = 'Notifikasi Sederhana';
+            const options = {
+                'body': 'Ini adalah konten notifikasi. \nBisa menggunakan baris baru.',
             }
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title, options);
+                });
+            } else {
+                console.error('FItur notifikasi tidak diijinkan.');
+            }
+        }
 
-            function showNotifikasiBadge() {
-                const title = 'Notifikasi dengan Badge';
-                const options = {
-                    'body': 'Ini adalah konten notifikasi dengan gambar badge.',
-                    'badge': 'maulana.jpg'
-                };
-                if (Notification.permission === 'granted') {
-                    navigator.serviceWorker.ready.then(function (registration) {
-                        registration.showNotification(title, options);
-                    });
-                } else {
-                    console.error('Fitur notifikasi tidak diijinkan.');
-                }
+        function showNotifikasiRequireInteraction() {
+            const title = 'Notifikasi yang meminta interaksi pengguna';
+            const options = {
+                requireInteraction: true,
+            };
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title, options);
+                });
+            } else {
+                console.error('Fitur notifikasi tidak diijinkan.');
             }
-        </script>
+        }
+
+        function showNotifikasiIkon() {
+            const title = 'Notifikasi Sederhana';
+            const options = {
+                'body': 'Ini adalah konten notifikasi dengan gambar ikon.',
+                'icon': 'maulana.jpg'
+            };
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title, options);
+                });
+            } else {
+                console.error('Fitur notifikasi tidak diijinkan.');
+            }
+        }
+
+        function showNotifikasiBadge() {
+            const title = 'Notifikasi dengan Badge';
+            const options = {
+                'body': 'Ini adalah konten notifikasi dengan gambar badge.',
+                'badge': 'maulana.jpg'
+            };
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title, options);
+                });
+            } else {
+                console.error('Fitur notifikasi tidak diijinkan.');
+            }
+        }
+
+        function showNotifikasiActions() {
+            const title = 'Notifikasi dengan Actions';
+            const options = {
+                'body': 'Ini adalah konten notifikasi dengan pilihan actions.',
+                'actions': [{
+                        'action': 'yes-action',
+                        'title': 'Ya',
+                        'icon': 'maulana.jpg'
+                    },
+                    {
+                        'action': 'no-action',
+                        'title': 'Tidak',
+                        'icon': 'maulana.jpg'
+                    }
+                ]
+            };
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title, options);
+                });
+            } else {
+                console.error('Fitur notifikasi tidak diijinkan.');
+            }
+        }
+
+        function showNotifikasiTag() {
+            const title1 = 'Notifikasi dengan Tag - 1';
+            const options1 = {
+                body: 'Anggota tag 1',
+                tag: 'message-group-1'
+            };
+            // notifikasi kedua
+            const title2 = 'Notifikasi dengan Tag - 2';
+            const options2 = {
+                body: 'Anggota tag 2',
+                tag: 'message-group-2'
+            };
+            // notifikasi ketiga
+            const title3 = 'Notifikasi dengan Tag - 3';
+            const options3 = {
+                body: 'Anggota tag 1',
+                tag: 'message-group-1'
+            };
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.ready.then(function (registration) {
+                    registration.showNotification(title1, options1);
+                    registration.showNotification(title2, options2);
+                    registration.showNotification(title3, options3);
+                });
+            } else {
+                console.error('Fitur notifikasi tidak diijinkan.');
+            }
+        }
+    </script>
 </body>
 
 </html>
